--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 								<h3>First Meeting</h3>
 								<hr />
 								<p>
-									Tim was visiting Taipei for his brother’s wedding. 
-									On a very rainy day stuck in the apartment
+									Tim was visiting Taipei for his brother’s wedding and was stuck in the apartment on a very rainy day. 
 									Boredom drove Tim to randomly text Michelle who happened to be visiting her family in Tainan. 
 									After some convincing, Tim hopped on a 2-hour train ride to meet up and spend a day with Michelle.
 								</p>
@@ -81,11 +80,12 @@
 								<p>Turns out grandma was actually a clairvoyant.</p>
 							</span><span class="chinese">
 								<h1>2019 年 9 月 11 日</h1>
-								<h3>第一次會議</h3>
+								<h3>初次相遇</h3>
 								<hr />
 								<p>因著參加哥哥婚禮而回來臺北的Tim，在一個大雨天被困在家中</p>
 								<p>Tim無聊地給Michelle發了訊息，發現Michelle也剛好回到了臺南探視父母親</p>
 								<p>經過一番自我說服後，Tim跳上了 2 小時的火車車程，來到了臺南並與米歇爾度過了一天</p>
+								</br/>
 								<p>在這一天快結束的時候，兩人一同到傳統米店買狀元稞</p>
 								<p>米店裏的一位奶奶和Tim以及Michelle聊著天，並誤以為兩個人正在交往</p>
 								<p>奶奶突然說：“你們趕緊結婚吧！”</p>
@@ -103,11 +103,19 @@
 							<span class="english">
 								<h3>9207km Away</h3>
 								<hr />
-								<p>Hampered by the COVID pandemic, Tim and Michelle were relegated to long-distance chatting. Yet despite both people’s hesitancy to have serious long-distance relationships, love proves to be more powerful and stubborn. It continues to grow and blossom.  </p>
+								<p>
+									Hampered by the COVID pandemic, Tim and Michelle were relegated to long-distance chatting. 
+									Yet despite both people’s hesitancy to have serious long-distance relationships
+									love proves to be more powerful and stubborn.
+								</p>
+								<p>It continues to grow and blossom</p>
 							</span><span class="chinese">
-								<h3>9207公里</h3>
+								<h3>相隔9207公里</h3>
 								<hr />
-								<p>受 COVID 大流行的影響，Tim 和 Michelle 只能進行長途聊天。然而，儘管兩個人都對建立嚴肅的異地戀關係猶豫不決，但事實證明，愛情更加強大和固執。它繼續生長和開花。 </p>
+								<p>由於新冠肺炎疫情的影響，Tim和Michelle只能遠程聊天。</p>
+								<p>然而，儘管兩人都對於是否要進入異地戀而猶豫不決</p>
+								<p>但事實證明 ——愛情更強大、更堅強</p>
+								<p>而且，繼續發芽、開花了</p>
 							</span>
 							<a href="#" class="icn-history-close">close</a>
                         </div>
@@ -120,12 +128,22 @@
 							<span class="english">
 								<h3>Back Together</h3>
 								<hr />
-								<p>With travel restrictions finally lifted, Tim travels back to Taiwan to meet up again with Michelle. Determined to make up for lost time, the two hung out whenever possible across both Taiwan and Seattle. They started making future plans together, including wanting to get a Yorkie named “Truffle” in the near future.</p>					
+								<p>
+									With travel restrictions finally lifted, 
+									Tim travels back to Taiwan to meet up again with Michelle. 
+									Determined to make up for lost time due to COVID pandemic, 
+									the two hung out whenever possible across Taipei, Tainan. Taitung, Seattle, Philadelphia, New York and L.A. 
+									They started making future plans together, including wanting to get a Yorkie named “Truffle” in the near future.
+								</p>
 							</span><span class="chinese">
-								<h1>2022 年 7 月 21 日</h1>
-								<h3>重新走到一起</h3>
+								<h3>重逢</h3>
 								<hr />
-								<p>隨著旅行限制終於解除，蒂姆回到台灣與米歇爾再次見面。決心彌補失去的時間，兩人盡可能在台灣和西雅圖閒逛。他們開始一起制定未來計劃，包括希望在不久的將來養一隻名叫“Truffle”的約克犬。</p>
+								<p>旅行的限制終於解除了</p>
+								<p>Tim回到臺灣再次與Michelle見面</p>
+								<p>為了彌補因為疫情而失去的時間，兩人把握機會在臺北、臺南、臺東、西雅圖、費城、紐約和洛杉磯旅行。</p>
+								<p>在旅途的當中，他們開始談論起未來</p>
+								<p>一起繪製未來的藍圖</p>
+								<p>包括，不久的將來將會養一只叫“Truffle”的約克夏。</p>
 							</span>
                             <a href="#" class="icn-history-close">close</a>
                         </div>
@@ -134,17 +152,31 @@
                         <img src="./img/bg/history-engagement.jpg" width="1300" height="768">
                         <a href="#" class="icn-history-more">more</a>
                         <div class="info">
-							<h1>2023</h1>
 							<span class="english">
+								<h1>Feb 10th, 2023</h1>
 								<h3>Engagement</h3>
 								<hr />
-								<p>The proposal came during a night time walk along the Anping canal. Michelle, having practiced her surprise reaction, put on the ring but waited another 5 minutes before saying “yes”.</p>
-								<p>We are celebrating our marriage on a wedding on June 3rd, 2023. Please join us in person or in spirit as we start a new chapter on our life together.</p>					
+								<p>
+									The proposal came during a night time walk along the Anping canal. 
+									Michelle, having practiced her surprise reaction, 
+									put on the ring 
+									but waited another 5 minutes before saying “yes”.
+								</p>
+								<p> 
+									We are celebrating our marriage on a wedding on June 3rd, 2023.
+									Please join us in person or in spirit as we start a new chapter on our life together
+								</p>
 							</span><span class="chinese">
+								<h1>2023 年 2 月 10 日</h1>
 								<h3>訂婚</h3>
 								<hr />
-								<p>這個提議是在夜間沿著安平運河散步時提出的。米歇爾練習了她的驚訝反應，戴上了戒指，但又等了 5 分鐘才說“是”。</p>
-								<p>我們將在 2023 年 6 月 3 日的婚禮上慶祝我們的婚姻。當我們一起開啟生活的新篇章時，請親自或以精神加入我們。</p>
+								<p>早就知道的Michelle在不斷地練習著驚訝的表情和反應後</p>
+								<p>她，戴上了戒指。</p>
+								<p>但是，忘了說Yes。</p>
+								<p>直到五分鐘後...</p>
+								<br/>
+								<p>我們將在2023年6月3日的婚禮上慶祝我們的婚姻。</p>
+								<p>我們邀請你們現場參加或通過發送祝福視頻的方式一起和我們慶祝即將共同開啟的生活新篇章。</p>
 							</span>
 							<a href="#" class="icn-history-close">close</a>
                         </div>
@@ -198,8 +230,8 @@
                         <img src="./img/gallery/gallery10.jpg" width="576" height="768">
                     </div>
 					<div class="item textBg">
-                        <div class="galleryText english">Our pre-wedding photos will be available here in June</div>
-						<div class="galleryText chinese">我們的婚前照片將於 6 月在此處提供</div>
+                        <div class="galleryText english">Our pre-wedding photos will be available here in June!</div>
+						<div class="galleryText chinese">我們的婚紗照將於6月份可以看到啦！</div>
                     </div>
                 </div>
                 <div class="carousel-indicators-wrap">
@@ -252,7 +284,7 @@
 							</span><span class="chinese">
 								<h3 class="time">婚禮, 3:30PM</h3>
 								<h4 class="location">Eastgate Presbyterian Church<br/>台北東門長老教會</h4>
-								<p>婚禮將在位於台北東門長老教會位於100台北市中正區仁愛路二段76號<br><br>
+								<p>婚禮將在位於臺灣臺北市中正區仁愛路二段76號的Eastgate Prebysterian教堂舉行<br><br>
 								<a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google 地圖</a>
 								</p>
 							</span>
@@ -290,10 +322,9 @@
 						<p>Instead of getting us a wedding gift though, we ask that you consider donating to our friend's charity and encourage your friends and family to do the same. You can find the donation link below:</p>
 					</span><span class="chinese">
 						<h1 class="heading">禮物清單</h1>
-						<p>我們太忙了（或者更可能是太懶了）沒時間坐下來構建註冊表。</p>
-						<p>請稍後再回來查看我們可能有可用的東西。</p>
+						<p>我們太忙了（嗯...也有可能只是太懶了）沒時間來製作禮物清單。</p>
 						<br>
-						<p>不過，我們希望您考慮向我們朋友的慈善機構捐款，並鼓勵您的朋友和家人也這樣做，而不是給我們送結婚禮物。您可以在下面找到捐贈鏈接：</p>
+						<p>不過，比起給我們送結婚禮物，我們更希望您能夠考慮向我們朋友設立的慈善機構捐款，並鼓勵您的朋友和家人也這樣做。您可以在下面找到捐贈鏈接：</p>
 					</span>
 					<a class="violet-charity" href="https://gofund.me/81d919f6" target="_blank"><h2>A Cure for Violet<h2></a>
                 </div>
@@ -313,12 +344,12 @@
 					</span>
 					<span class="chinese">
 						<h1 class="heading">交通指南</h1>
-						<p><b>從桃園機場 (TPE)：</b>出租車是前往台北最簡單且價格合理的方式。當您離開行李提取區時，有一個出租車信息站。成本應該在 ~1400 新台幣左右。如需更便宜的選擇，您可以乘坐桃園機場捷運到台灣總站，只需約 150 新台幣。嘗試乘坐紫色特快列車，因為它會快得多。</p>
-						<p><b>從台北車站：</b>搭乘計程車只需幾百台幣便可到達。如果你喜歡坐捷運，你可以乘坐藍線南港方向，在忠孝新生站下車（2站）。要前往香格里拉大酒店，請繼續乘坐藍線至忠孝復興站。轉搭往台北動物園方向的布朗線，在科技大樓或六張里站下車。 (<a href="https://english.metro.taipei/cp.aspx?n=1BE0AF76C79F9A38" target="_blank">地鐵地圖</a>)</p>
+						<p><b>從桃園機場 (TPE):</b>出發：計程車是前往臺北最簡單且價格合理的方式。當您離開行李提取區時，有一個計程車等候區。車費大約在 ~1400 新台幣左右。如需更便宜的選擇，您也可以乘坐桃園機場捷運到臺北車站，只需約 150 新台幣。建議可以搭乘紫色特快列車，因為它會快得許多。<p>
+						<p><b>從臺北車站出發：</b>搭乘計程車只需幾百元新台幣便可到達。但是，如果你喜歡坐捷運，也可以乘坐藍線（南港方向），在忠孝新生站下車（2站）。要前往遠東香格里拉大酒店，請繼續乘坐藍線至忠孝復興站。轉搭往臺北動物園方向的棕色線，在科技大樓或六張裏站下車。(<a href="https://english.metro.taipei/cp.aspx?n=1BE0AF76C79F9A38" target="_blank">地鐵地圖</a>)</p>
 						<p><b>酒店選擇：</b></p>
 						<ul>
-							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">台北遠東香格里拉</a> （聯繫我們為客人提供 15% 的折扣）</li>
-							<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">台北福華大飯店</a> （舊，但位置方便）</li>
+							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">臺北遠東香格里拉</a> （聯繫我們為客人提供 15% 的折扣）</li>
+							<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">臺北福華大飯店</a> （位置方便）</li>
 						</ul>
 					</span>
                 </div>
@@ -337,11 +368,11 @@
 					</span><span class="chinese">
 						<h1 class="heading">與我們一起慶祝</h1>
 						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">點擊此處回复</a></h2>
+						
 						<p>我們在世界各地都有朋友和家人，雖然我們很想見到每個人，但我們完全理解許多人很難親自參加婚禮。</p>
 						<p>我們仍然希望您無論身在何處都能與我們一起慶祝。</p>
-						<p>如果您想虛擬參與，請向我們發送視頻消息，我們將拼接在一起並在招待會上播放。請將視頻保持在 30 秒到 1 分鐘之間，並使用橫向。如果文件大小小於 50MB，請通過以下地址給我們發送電子郵件。如果更大，您可以上傳到共享的 <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google Drive</a> 或聯繫我們另行安排< /p>
-
-						<p>您可以通過 <a href="mailto:TiMich.Wedding@gmail.com">TiMich.Wedding@gmail.com</a> 或通過任何其他聯繫機制與我們聯繫。我們很樂意聽取您的意見！</p>
+						<p>如果您想虛擬參與，請向我們發送祝福視頻，我們將會把視頻拼接在一起並在婚宴上播放。請將視頻保持在 30 秒到 1 分鐘之間，並保持橫向攝影。如果檔大小小於 50MB，請通過以下地址給我們發送電子郵件。如果更大，您可以上傳到共用的 <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google Drive</a>  或聯繫我們另行安排</p>
+						<p>您可以通過 <a href="mailto:TiMich.Wedding@gmail.com">TiMich.Wedding@gmail.com</a> 或通過任何其他聯繫方式與我們取得聯繫。我們很樂意聽取您的意見！</a>
 					</span>
 				</div>
                 <p class="tagline">Site template heavily borrowed and adapted from https://www.judieandz.com/</p>
@@ -367,7 +398,7 @@
             </nav>
 			<div id="languageSelector" data-717="font-size: 2em; color: #7e7e7e; background: rgba(0, 0, 0, 0.6); filter: alpha(opacity=100); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
 												-moz-opacity: 1; -khtml-opacity: 1; opacity: 1;"
-										data-718="top: auto; bottom: 0; font-size: 1em; color: black; background: rgba(0, 0, 0, 0.4); filter: alpha(opacity=40); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=40)';
+										data-718="top: auto; bottom: 0; font-size: 1em; color: #000000; background: rgba(0, 0, 0, 0.4); filter: alpha(opacity=40); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=40)';
 												-moz-opacity: 0.4; -khtml-opacity: 0.4; opacity: 0.4;" ">
 				<a class="active" toggle="english">English</a><span> | </span><a toggle="chinese">中文</a>
 			</div>
