--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<h3>初次相遇</h3>
 								<hr />
 								<p>因著參加哥哥婚禮而回來臺北的Tim，在一個大雨天被困在家中</p>
-								<p>無聊地Tim給Michelle發了訊息，發現Michelle也剛好回到了臺南探視父母親</p>
+								<p>無聊的Tim給Michelle發了訊息，發現Michelle也剛好回到了臺南探視父母親</p>
 								<p>經過一番自我說服後，Tim跳上了 2 小時的火車車程，來到了臺南並與米歇爾度過了一天</p>
 								</br/>
 								<p>在這一天快結束的時候，兩人一同到傳統米店買狀元稞</p>
@@ -286,7 +286,7 @@
 							</span><span class="chinese">
 								<h3 class="time">婚禮, 3:30PM</h3>
 								<h4 class="location">Eastgate Presbyterian Church<br/>台北東門長老教會</h4>
-								<p>婚禮將在位於臺灣臺北市中正區仁愛路二段76號的Eastgate Prebysterian教堂舉行<br><br>
+								<p>婚禮將在Eastgate Prebysterian教堂舉行，地址為臺北市中正區仁愛路二段76號<br><br>
 								<a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google 地圖</a>
 								</p>
 							</span>
@@ -302,7 +302,7 @@
 							</span><span class="chinese">
 								<h3 class="time">婚宴, 6:30PM</h3>
 								<h4 class="location">Shangri-La Far Eastern Hotel<br/>台北遠東香格里拉</h4>
-								<p>婚宴將在台北遠東香格里拉舉行，座落於台北市大安區敦化南路二段201號。雞尾酒歡迎會將於下午 6:00 開始，晚餐將於下午 6:30 開始。飯店距婚禮地點約 15 分鐘的車程。<br><br>
+								<p>婚宴將在臺北遠東香格里拉舉行，地址為臺北市大安區敦化南路二段201號。雞尾酒歡迎會將於下午 6:00 開始，晚宴將於下午 6:30 開始。飯店距婚禮地點約 15 分鐘的車程。<br><br>
 								<a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google 地圖</a>
 								</p>
 							</span>
@@ -348,7 +348,7 @@
 						<p><b>從臺北車站出發：</b>搭乘計程車只需幾百元新台幣便可到達。但是，如果您喜歡坐捷運，也可以乘坐藍線（南港方向），在忠孝新生站下車（2站）。要前往遠東香格里拉大酒店，請繼續乘坐藍線至忠孝復興站。轉搭往臺北動物園方向的棕色線，在科技大樓或六張裏站下車。(<a href="https://english.metro.taipei/cp.aspx?n=1BE0AF76C79F9A38" target="_blank">地鐵地圖</a>)</p>
 						<p><b>酒店選擇：</b></p>
 						<ul>
-							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">臺北遠東香格里拉</a> （聯繫我們為客人提供 15% 的折扣）</li>
+							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">臺北遠東香格里拉</a> （聯繫我們以取得飯店為婚宴客人提供 的15% 折扣）</li>
 							<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">臺北福華大飯店</a> （位置方便）</li>
 						</ul>
 					</span>
