--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<h3>一切起源於...</h3>
 								<hr />
 								<p>這一切的開始起源於一封簡單而禮貌的電子郵件交流</p>
-								<p>通過家人和朋友的介紹，Tim取得了Michelle的Email地址<p>
-								<p>Tim 是西雅圖的軟件開發高級經理，Michelle 是在上海的高級律師</p>
+								<p>通過家人和朋友的介紹，<b>Tim</b> 取得了<b>Michelle</b> 的<b> Email</b> 地址<p>
+								<p><b>Tim</b> 是西雅圖的軟件開發高級經理，<b>Michelle</b> 是在上海的高級律師</p>
 								<p>兩人都不想尋找異地戀</p>
 							</span>
                             <a href="#" class="icn-history-close">close</a>
@@ -79,15 +79,15 @@
 								<br/>
 								<p>Turns out grandma was actually a clairvoyant.</p>
 							</span><span class="chinese">
-								<h1>2019 年 9 月 11 日</h1>
+								<h1><span class='normalText'>2019 年 9 月 11 日<span></h1>
 								<h3>初次相遇</h3>
 								<hr />
-								<p>因著參加哥哥婚禮而回來臺北的Tim，在一個大雨天被困在家中</p>
-								<p>無聊的Tim給Michelle發了訊息，發現Michelle也剛好回到了臺南探視父母親</p>
-								<p>經過一番自我說服後，Tim跳上了 2 小時的火車車程，來到了臺南並與米歇爾度過了一天</p>
+								<p>因著參加哥哥婚禮而回來臺北的 <b>Tim</b>，在一個大雨天被困在家中</p>
+								<p>無聊的 <b>Tim</b> 給 <b>Michelle</b> 發了訊息，發現 <b>Michelle</b> 也剛好回到了臺南探視父母親</p>
+								<p>經過一番自我說服後，<b>Tim</b> 跳上了 <span class='normalText'>2</span> 小時的火車車程，來到了臺南並與米歇爾度過了一天</p>
 								</br/>
 								<p>在這一天快結束的時候，兩人一同到傳統米店買狀元稞</p>
-								<p>米店裏的一位奶奶和Tim以及Michelle聊著天，並誤以為兩個人正在交往</p>
+								<p>米店裏的一位奶奶和 <b>Tim</b> 以及 <b>Michelle</b> 聊著天，並誤以為兩個人正在交往</p>
 								<p>奶奶突然說：“你們趕緊結婚吧！”</p>
 								<br/>
 								<p>沒想到，原來奶奶還是個預言者</p>
@@ -110,9 +110,9 @@
 								</p>
 								<p>It continues to grow and blossom</p>
 							</span><span class="chinese">
-								<h3>相隔9207公里</h3>
+								<h3><span class="normalText">相隔9207公里</span></h3>
 								<hr />
-								<p>由於新冠肺炎疫情的影響，Tim和Michelle只能遠程聊天。</p>
+								<p>由於新冠肺炎疫情的影響，<b>Tim</b> 和 <b>Michelle</b> 只能遠程聊天。</p>
 								<p>然而，儘管兩人都對於是否要進入異地戀而猶豫不決</p>
 								<p>但事實證明 ——愛情更強大、更堅強</p>
 								<p>而且，繼續發芽、開花了</p>
@@ -139,11 +139,11 @@
 								<h3>重逢</h3>
 								<hr />
 								<p>旅行的限制終於解除了</p>
-								<p>Tim回到臺灣再次與Michelle見面</p>
+								<p><b>Tim</b> 回到臺灣再次與 <b>Michelle</b> 見面</p>
 								<p>為了彌補因為疫情而失去的時間，兩人把握機會在臺北、臺南、臺東、西雅圖、費城、紐約和洛杉磯旅行。</p>
 								<p>在旅途的當中，他們開始談論起未來</p>
 								<p>一起繪製未來的藍圖</p>
-								<p>包括，不久的將來將會養一只叫“Truffle”的約克夏。</p>
+								<p>包括，不久的將來將會養一只叫 <b>“Truffle”</b> 的約克夏。</p>
 							</span>
                             <a href="#" class="icn-history-close">close</a>
                         </div>
@@ -171,13 +171,13 @@
 								<h3>訂婚</h3>
 								<hr />
 								<p>在安平運河沿岸，兩人一起在這裏夜間散步</p>
-								<p>Tim向Michelle求婚了</p>
-								<p>早就知道的Michelle在不斷地練習著驚訝的表情和反應後</p>
+								<p><b>Tim</b> 向 <b>Michelle</b> 求婚了</p>
+								<p>早就知道的 <b>Michelle</b> 在不斷地練習著驚訝的表情和反應後</p>
 								<p>她，戴上了戒指。</p>
-								<p>但是，忘了說Yes。</p>
+								<p>但是，忘了說 <b>Yes</b>。</p>
 								<p>直到五分鐘後...</p>
 								<br/>
-								<p>我們將在2023年6月3日的婚禮上慶祝我們的婚姻。</p>
+								<p>我們將在<span class='normalText'>2023年6月3日</span>的婚禮上慶祝我們的婚姻。</p>
 								<p>我們邀請您們現場參加或通過發送祝福視頻的方式一起和我們慶祝即將共同開啟的生活新篇章。</p>
 							</span>
 							<a href="#" class="icn-history-close">close</a>
