--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<span class="english">
 						Michelle &amp; Tim are getting married June 3rd, 2023
 					</span><span class="chinese">
-						米歇爾和蒂姆將於 2023 年 6 月 3 日結婚
+						Michelle 和 Tim 將於 2023 年 6 月 3 日結婚
 					</span>
 				</h1>
             </section>
@@ -82,9 +82,9 @@
 								<h1><span class='normalText'>2019 年 9 月 11 日<span></h1>
 								<h3>初次相遇</h3>
 								<hr />
-								<p>因著參加哥哥婚禮而回來臺北的 <b>Tim</b>，在一個大雨天被困在家中</p>
+								<p>因著參加哥哥婚禮回來臺北的 <b>Tim</b>，在一個大雨天被困在家中</p>
 								<p>無聊的 <b>Tim</b> 給 <b>Michelle</b> 發了訊息，發現 <b>Michelle</b> 也剛好回到了臺南探視父母親</p>
-								<p>經過一番自我說服後，<b>Tim</b> 跳上了 <span class='normalText'>2</span> 小時的火車車程，來到了臺南並與米歇爾度過了一天</p>
+								<p>經過一番自我說服後，<b>Tim</b> 跳上了 <span class='normalText'>2</span> 小時的火車車程，來到了臺南並與 <b>Michelle</b> 度過了一天</p>
 								</br/>
 								<p>在這一天快結束的時候，兩人一同到傳統米店買狀元稞</p>
 								<p>米店裏的一位奶奶和 <b>Tim</b> 以及 <b>Michelle</b> 聊著天，並誤以為兩個人正在交往</p>
@@ -280,15 +280,21 @@
 							<span class="english">
 								<h3 class="time">Wedding, 3:00PM</h3>
 								<h4 class="location">Eastgate Presbyterian Church<br/>台北東門長老教會</h4>
-								<p>The wedding ceremony will take place at Eastgate Prebysterian Church located at No. 76, Section 2, Ren'ai Rd, Zhongzheng District, Taipei City, Taiwan 100<br><br>
-								<a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google Map</a>
-								</p>
+								<div class="infoText">
+									<p>The wedding ceremony will take place at Eastgate Prebysterian Church located at:</p>
+									<p>No. 76, Section 2, Ren'ai Rd, Zhongzheng District, Taipei City, Taiwan 100</p>
+									<p><a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google Map</a></p>
+								</div>
 							</span><span class="chinese">
 								<h3 class="time">婚禮, 3:00PM</h3>
 								<h4 class="location">Eastgate Presbyterian Church<br/>台北東門長老教會</h4>
-								<p>婚禮將在Eastgate Prebysterian教堂舉行，地址為臺北市中正區仁愛路二段76號<br><br>
-								<a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google 地圖</a>
-								</p>
+								<div class="infoText">
+									<p>
+										婚禮將在Eastgate Prebysterian教堂舉行<br/>
+										地址為臺北市中正區仁愛路二段76號<br/><br/>
+										<a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google 地圖</a>
+									</p>
+								</div>
 							</span>
                         </div>
                         <div id="reception" class="item">
@@ -296,15 +302,25 @@
 							<span class="english">
 								<h3 class="time">Reception, 6:30PM</h3>
 								<h4 class="location">Shangri-La Far Eastern Hotel<br/>台北遠東香格里拉</h4>
-								<p>The reception will be at Shangri-La Far Eastern Hotel located at No. 201, Section 2, Dunhua S Rd, Da’an District, Taipei City, Taiwan 106. Pre-party will start at 6:00PM with dinner starting at 6:30PM. The hotel is ~15 minute taxi ride from the wedding location.<br><br>
-								<a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google Map</a>
-                            </p>
+								<div class="infoText">
+									<p>The reception will be at Shangri-La Far Eastern Hotel located at:</p>
+									<p>No. 201, Section 2, Dunhua S Rd, Da’an District, Taipei City, Taiwan 106.</p>
+									<p>Pre-party will start at 6:00PM with dinner starting at 6:30PM. The hotel is ~15 minute taxi ride from the wedding location.</p>
+									<p><a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google Map</a></p>
+								</div>
 							</span><span class="chinese">
 								<h3 class="time">婚宴, 6:30PM</h3>
 								<h4 class="location">Shangri-La Far Eastern Hotel<br/>台北遠東香格里拉</h4>
-								<p>婚宴將在臺北遠東香格里拉舉行，地址為臺北市大安區敦化南路二段201號。雞尾酒歡迎會將於下午 6:00 開始，晚宴將於下午 6:30 開始。飯店距婚禮地點約 15 分鐘的車程。<br><br>
-								<a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google 地圖</a>
-								</p>
+								<div class="infoText">
+									<p>
+										婚宴將在臺北遠東香格里拉舉行<br/>
+										地址為臺北市大安區敦化南路二段201號<br/>
+										雞尾酒歡迎會將於下午 6:00 開始<br/>
+										晚宴將於下午 6:30 開始<br/>
+										飯店距婚禮地點約 15 分鐘的車程。<br/><br/>
+										<a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google 地圖</a>
+									</p>
+								</div>
 							</span>
                         </div>
                     </div>
@@ -336,21 +352,25 @@
 						<h1 class="heading">Travel Info</h1>
 						<p><b>From Taoyuan airport (TPE):</b> Taxi is the easiest and reasonably-priced way to get to Taipei. There is a taxi info station as you exit the baggage claim area. The cost should be around ~1400 NT Dollars. For a cheaper option, you can take the Taoyuan Airport MRT to Taiwan Main Station for ~150 NT Dollar. Try to take the purple Express train as it'll be much faster.</p>
 						<p><b>From Taipei Main Station:</b> You should be able to get to where you need by taxi for a few hundred NT dollars. If you prefer to take MRT, you can get to the wedding by taking the Blue line toward Nangang, and get off at Zhongxiao Xinsheng station (2 stops). To get to Shangrai-La hotel, continue on the Blue line to Zhongxiao Fuxing station. Transfer to the Brown line toward Taipei Zoo Station, and get off at either Technology Building or Liuzhangli station. (<a href="https://english.metro.taipei/cp.aspx?n=1BE0AF76C79F9A38" target="_blank">Metro Map</a>)</p> 
-						<p><b>Hotel options:</b></p>
-						<ul>
-							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">Shangri-La Far Eastern</a> (reach out to us for 15% discount for guests)</li>
-							<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">Howard Plaza Hotel</a> (old, but conveniently located)</li>
-						</ul>
+						<div class="hotelOptions">
+							<div><b>Hotel options:</b></div>
+							<ul>
+								<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">Shangri-La Far Eastern</a> (reach out to us for 15% discount for guests)</li>
+								<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">Howard Plaza Hotel</a> (old, but conveniently located)</li>
+							</ul>
+						</div>
 					</span>
 					<span class="chinese">
 						<h1 class="heading">交通指南</h1>
 						<p><b>從桃園機場 (TPE):</b>出發：計程車是前往臺北最簡單且價格合理的方式。當您離開行李提取區時，有一個計程車等候區。車費大約在 ~1400 新台幣左右。如需更便宜的選擇，您也可以乘坐桃園機場捷運到臺北車站，只需約 150 新台幣。建議可以搭乘紫色特快列車，因為它會快得許多。<p>
 						<p><b>從臺北車站出發：</b>搭乘計程車只需幾百元新台幣便可到達。但是，如果您喜歡坐捷運，也可以乘坐藍線（南港方向），在忠孝新生站下車（2站）。要前往遠東香格里拉大酒店，請繼續乘坐藍線至忠孝復興站。轉搭往臺北動物園方向的棕色線，在科技大樓或六張裏站下車。(<a href="https://english.metro.taipei/cp.aspx?n=1BE0AF76C79F9A38" target="_blank">地鐵地圖</a>)</p>
-						<p><b>酒店選擇：</b></p>
-						<ul>
-							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">臺北遠東香格里拉</a> （聯繫我們以取得飯店為婚宴客人提供 的15% 折扣）</li>
-							<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">臺北福華大飯店</a> （位置方便）</li>
-						</ul>
+						<div class="hotelOptions">
+							<div class="hotelOptions"><b>酒店選擇：</b></div>
+							<ul>
+								<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">臺北遠東香格里拉</a> （聯繫我們以取得飯店為婚宴客人提供 的15% 折扣）</li>
+								<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">臺北福華大飯店</a> （位置方便）</li>
+							</ul>
+						</div>
 					</span>
                 </div>
             </section>
