--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<span class="english">
 						Michelle &amp; Tim are getting married June 3rd, 2023
 					</span><span class="chinese">
-						Michelle 和 Tim 將於 2023 年 6 月 3 日結婚
+						Michelle 和 Tim 將於 2023 年 6 月 3 日舉辦婚禮
 					</span>
 				</h1>
             </section>
