--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 										地址為臺北市大安區敦化南路二段201號<br/>
 										雞尾酒歡迎會將於下午 6:00 開始<br/>
 										晚宴將於下午 6:30 開始<br/>
-										飯店距婚禮地點約 15 分鐘的車程。<br/><br/>
+										飯店距婚禮地點約 15 分鐘的車程<br/><br/>
 										<a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google 地圖</a>
 									</p>
 								</div>
