--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 							<div><b>Hotel options:</b></div>
 							<ul>
 								<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">Shangri-La Far Eastern</a> (reach out to us for 15% discount for guests)</li>
-								<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">Howard Plaza Hotel</a> (old, but conveniently located)</li>
+								<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">Howard Plaza Hotel</a> (conveniently located)</li>
 							</ul>
 						</div>
 					</span>
