--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
 					<span class="english">
 						<h1 class="heading">Festivities</h1>
 						<h2>Saturday June 3rd</h2>
-						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">Click here to RSVP</a></h2>
+						<h2><a class="rsvp" target="_blank">Click here to RSVP</a></h2>
 					</span><span class="chinese">
 						<h1 class="heading chinese">婚禮詳情</h1>
 						<h2>星期六 6月3日</h2>
-						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">點擊此處回复</a></h2>
+						<h2><a class="rsvp" target="_blank">點擊此處回复</a></h2>
 					</span>
 					
                     <div class="carousel-inner">
@@ -379,7 +379,7 @@
                 <div class="wrapper" data-4300="margin-top: 150px;" data-4700="margin-top: 0px;">
 					<span class="english">
 						<h1 class="heading">Celebrate With Us</h1>
-						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">Click here to RSVP</a></h2>
+						<h2><a class="rsvp" target="_blank">Click here to RSVP</a></h2>
 						<p>We have friends and family around the world, and while we'd love to see everyone in person, we fully understand that it's difficult for many to physically attend the wedding.</p>
 						<p>We nonetheless hope that you will celebrate with us where ever you may be.</p>
 						<p>If you'd like to participate virtually, please send us a video message that we will splice together and play at the reception. Please keep the video at ~30sec to 1 min and use landscape orientation. If the file size is less than 50MB, email us at the address below. If it's larger, you can upload to the shared <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google Drive</a> or reach out to make separate arrangements</p>
@@ -387,7 +387,7 @@
 						<p>You can reach out to us at <a href="mailto:TiMich.Wedding@gmail.com">TiMich.Wedding@gmail.com</a> or through any other contact mechanism. We'd love to hear from you!</p>
 					</span><span class="chinese">
 						<h1 class="heading">與我們一起慶祝</h1>
-						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">點擊此處回复</a></h2>
+						<h2><a class="rsvp" target="_blank">點擊此處回复</a></h2>
 						
 						<p>我們在世界各地都有朋友和家人，雖然我們很想見到每個人，但我們完全理解許多人很難親自參加婚禮。</p>
 						<p>我們仍然希望您無論身在何處都能與我們一起慶祝。</p>
