--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             <img src="./img/bg/reception.png" data-original="img/bg/reception.png">
 							<span class="english">
 								<h3 class="time">Reception, 6:30PM</h3>
-								<h4 class="location">Shangri-La Far Eastern Hotel<br/>台北遠東香格里拉</h4>
+								<h4 class="location">Shangri-La Far Eastern Hotel<br>Shangri-La Ballroom (2F)<br/>台北遠東香格里拉 二樓香格里拉宴會廳</h4>
 								<div class="infoText">
 									<p>The reception will be at Shangri-La Far Eastern Hotel located at:</p>
 									<p>No. 201, Section 2, Dunhua S Rd, Da’an District, Taipei City, Taiwan 106.</p>
