--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html class="js no-touch skrollr " style=""><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>We're Getting Married!</title>
-        <meta name="description" content="Michelle and Tim are getting married in Taipei, Taiwan on June 3rd, 2023.">
+        <title>We're Married!</title>
+        <meta name="description" content="Michelle and Tim are married in Taipei, Taiwan on June 3rd, 2023.">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="./static/normalize.css">
         <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
                 <div class="image" data-10="top: 0px;" data-750="top: -60px;"></div>
                 <h1 class="heading-header" data-10="opacity:1; top: 50px;" data-250="opacity:0; top: -100px;">
 					<span class="english">
-						Michelle &amp; Tim are getting married June 3rd, 2023
+						Michelle &amp; Tim are married June 3rd, 2023
 					</span><span class="chinese">
 						Michelle 和 Tim 將於 2023 年 6 月 3 日舉辦婚禮
 					</span>
@@ -231,9 +231,74 @@
 					<div class="item imgBg">
                         <img src="./img/gallery/gallery10.jpg" width="576" height="768">
                     </div>
-					<div class="item textBg">
-                        <div class="galleryText english">Our pre-wedding photos will be available here in June!</div>
-						<div class="galleryText chinese">我們的婚紗照將於6月份可以看到啦！</div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery11.jpg" width="1152" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery12.jpg" width="512" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery13.jpg" width="512" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery14.jpg" width="512" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery15.jpg" width="512" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery16.jpg" width="512" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery17.jpg" width="512" height="768">
+                    </div>
+					 <div class="item imgBg">
+                        <img src="./img/gallery/gallery18.jpg" width="512" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery19.jpg" width="512" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery20.jpg" width="1151" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery21.jpg" width="512" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery22.jpg" width="1151" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery23.jpg" width="1151" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery24.jpg" width="512" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery25.jpg" width="1151" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery26.jpg" width="512" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery27.jpg" width="1151" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery28.jpg" width="576" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery29.jpg" width="1152" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery30.jpg" width="512" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery31.jpg" width="1151" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery32.jpg" width="512" height="768">
+                    </div>
+                    <div class="item imgBg">
+                        <img src="./img/gallery/gallery33.jpg" width="1025" height="768">
                     </div>
                 </div>
                 <div class="carousel-indicators-wrap">
@@ -249,6 +314,29 @@
                         <li data-target="#gallery" data-slide-to="8"></li>
                         <li data-target="#gallery" data-slide-to="9"></li>
                         <li data-target="#gallery" data-slide-to="10"></li>
+                        <li data-target="#gallery" data-slide-to="11"></li>
+                        <li data-target="#gallery" data-slide-to="12"></li>
+						<li data-target="#gallery" data-slide-to="13"></li>
+                        <li data-target="#gallery" data-slide-to="14"></li>
+                        <li data-target="#gallery" data-slide-to="15"></li>
+                        <li data-target="#gallery" data-slide-to="16"></li>
+                        <li data-target="#gallery" data-slide-to="17"></li>
+                        <li data-target="#gallery" data-slide-to="18"></li>
+                        <li data-target="#gallery" data-slide-to="19"></li>
+                        <li data-target="#gallery" data-slide-to="20"></li>
+                        <li data-target="#gallery" data-slide-to="21"></li>
+                        <li data-target="#gallery" data-slide-to="22"></li>
+						<li data-target="#gallery" data-slide-to="23"></li>
+                        <li data-target="#gallery" data-slide-to="24"></li>
+                        <li data-target="#gallery" data-slide-to="25"></li>
+                        <li data-target="#gallery" data-slide-to="26"></li>
+                        <li data-target="#gallery" data-slide-to="27"></li>
+                        <li data-target="#gallery" data-slide-to="28"></li>
+                        <li data-target="#gallery" data-slide-to="29"></li>
+                        <li data-target="#gallery" data-slide-to="30"></li>
+                        <li data-target="#gallery" data-slide-to="31"></li>
+                        <li data-target="#gallery" data-slide-to="32"></li>
+						
                     </ol>
                 </div>
                 <a class="carousel-control left" href="#gallery" data-slide="prev">‹</a>
